--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Checky by dubcanada</title>
+    <title>checky by dubcanada</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Checky</h1>
-        <p></p>
+        <h1>checky</h1>
+        <p>A small checkbox replacement library using only javascript.</p>
 
         <p class="view"><a href="https://github.com/dubcanada/checky">View the Project on GitHub <small>dubcanada/checky</small></a></p>
 
@@ -61,6 +61,6 @@ $ git checkout gh-pages
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
